[tool.poetry]
name = "neuroplay-alt-sdk"
version = "1.1.1"
description = "NeuroPlaySDK but better."
authors = ["v14d4n"]
readme = "README.md"
packages = [
    { include = "neuroplay_alt_sdk", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.12"
bleak = "^0.22.2"
scipy = "^1.14.1"
pyedflib = "^0.1.38"
pandas = "^2.2.3"
numpy = ">=1.26.4,^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
